--- a/App/Views/app/timeline.phtml
+++ b/App/Views/app/timeline.phtml
@@ -75,13 +75,14 @@
 						<p><strong><?=$tweet['nome']?></strong> 
 						<small><span class="text text-muted">- <?=$tweet['data']?></span></p></small>
 						<p><?=$tweet['tweet']?></p>
-
 						<br />
-						<form>
-							<div class="col d-flex justify-content-end">
-								<button type="submit" class="btn btn-danger"><small>Remover</small></button>
-							</div>
-						</form>
+						<?php if($tweet['id_usuario'] == $_SESSION['id']) { ?>
+							<form>
+								<div class="col d-flex justify-content-end">
+									<button type="submit" class="btn btn-danger"><small>Remover</small></button>
+								</div>
+							</form>
+						<?php } ?>
 					</div>
 				</div>
 			<?php } ?>
